networkpolicy/networkpolicy__basic_kafka_setup__prometheus__all__prometheus__ingress__ports__prometheus__nr58__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--all--prometheus--ingress--ports--prometheus--nr58
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: prometheus
